First Revision of onOS!

--- a/main.html
+++ b/main.html
@@ -1,1 +1,60 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Simple Desktop</title>
+  <style src="style-main.css"></style>
+</head>
+<body>
+  <div class="boot-screen">
+    <!-- You can add an image or any other content here -->
+    <img src="boot_image.png" alt="Boot Image" style="max-width: 100%; max-height: 100%;">
+  </div>
+  <div class="desktop">
+    <div class="icon" style="top: 100px; left: 100px;" onclick="openFileExplorer()">
+      <img src="folder_icon.png" alt="Folder Icon">
+    </div>
+    <!-- Add more icons for other files or shortcuts as needed -->
+    <div class="start-menu" id="startMenu">
+      <ul>
+        <li><a href="#" onclick="openNotepad()">Notepad</a></li>
+        <li><a href="#" onclick="openCalculator()">Calculator</a></li>
+        <li><a href="#" onclick="openBrowser()">Browser</a></li>
+      </ul>
+    </div>
+    <div class="start-button" onclick="toggleStartMenu()">Start</div>
+    <div class="browser-window" id="browserWindow">
+      <div class="browser-header">
+        <div class="address-bar">
+          <input type="text" id="urlInput" placeholder="Enter URL">
+          <button onclick="goToUrl()">Go</button>
+        </div>
+        <div class="navigation-buttons">
+          <button onclick="goBack()">Back</button>
+          <button onclick="goForward()">Forward</button>
+          <button onclick="reloadPage()">Reload</button>
+        </div>
+        <div class="close-button" onclick="closeBrowser()">X</div>
+      </div>
+      <div class="browser-content">
+        <iframe id="browserFrame" style="width: 100%; height: 100%; border: none;"></iframe>
+      </div>
+    </div>
+  </div>
+  <div id="fileExplorer" class="file-explorer" style="display: none;">
+    <h2>File Explorer</h2>
+    <ul>
+      <li>Document1.txt</li>
+      <li>Document2.txt</li>
+      <li>Image1.jpg</li>
+      <li>Image2.jpg</li>
+      <li>Song1.mp3</li>
+      <li>Song2.mp3</li>
+    </ul>
+  </div>
+  <script src="script-main.js">
+  </script>
+</body>
+</html>
 
